--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -1,8 +1,46 @@
 .Portfolio {
   text-align: center;
+  margin-top: 60px;
 }
 
-ul {
+.resume{
+    display: flex;
+}
+.story{
+    display: flex;
+}
+.stack{
+    display: flex;
+}
+.projects{
+    display: flex;
+}
+.dev{
+    display: flex;
+}
+.hide {
+    display: none;
+}
+
+.menu-item {
+  display: block;
+  color: #666;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+.menu-item:hover:not(.active) {
+  background-color: #ddd;
+}
+.active {
+  color: white;
+  background-color: #4CAF50;
+}
+
+.weblink:hover {
+  opacity: 0.7;
+}
+.topbar {
   position: fixed;
   top: 0px;
   width: 100vw;
@@ -11,25 +49,16 @@ ul {
   padding: 0;
   border: 1px solid #e7e7e7;
   background-color: #f3f3f3;
+  box-shadow: 0 3px 10px #BBBBBB;
+}
+.menu-button {
+  display: none;
 }
 
 li {
   float: left;
 }
 
-li a {
-  display: block;
-  color: #666;
-  text-align: center;
-  padding: 14px 16px;
+a {
   text-decoration: none;
-}
-
-li a:hover:not(.active) {
-  background-color: #ddd;
-}
-
-li a.active {
-  color: white;
-  background-color: #4CAF50;
 }
