--- a/portfolio/src/components/projects.css
+++ b/portfolio/src/components/projects.css
@@ -19,8 +19,8 @@
 .ProjectCardText {
   grid-column: 2/7;
   padding: 2px 10px 2px 10px;
-
 }
+
 .ProjectCardImage {
   grid-column: 1;
   display: flex;
@@ -37,9 +37,36 @@
   display: grid;
   grid-template-columns: auto auto auto auto auto auto;
   background-color: rgba(76,175,80,0.3);
-  padding: 20px 10px 20px 10px;
+  padding: 10px 10px 20px 10px;
+  max-height: 70vh;
+  overflow: auto;
+}
+.ProjectBoxTitle {
+  color: #2d6930;
+  font-size: 20px;
+  grid-column: 1/7;
+}
+.ProjectBox > .ProjectCard:hover {
+  opacity: 0.7;
+}
+#style-7::-webkit-scrollbar-track
+{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    background-color: #F5F5F5;
+    border-radius: 10px;
 }
 
+#style-7::-webkit-scrollbar
+{
+    width: 10px;
+    background-color: #F5F5F5;
+}
+
+#style-7::-webkit-scrollbar-thumb
+{
+    border-radius: 10px;
+    background-color: #2d6930;
+}
 @media only screen and (max-width: 600px) {
   .ProjectBox {
     height: auto;
